--- a/Contact.html
+++ b/Contact.html
@@ -23,7 +23,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-											<li><a href="Home.html">Home</a></li>
+											<li><a href="index.html">Home</a></li>
 											<li><a href="People.html">People</a></li>
 											<li>
 												<a href="Research.html">Research</a>
