--- a/Contact.html
+++ b/Contact.html
@@ -1,5 +1,5 @@
 <html>
-<!-- This will be the homepage -->
+<!-- This will be the contact page -->
 <head>
     <title> Kerzendorf Group Website </title>
     <meta charset="utf-8" />
@@ -51,16 +51,36 @@
                 </nav>
             </div>
         </div>
-        <!-- Main -->
+
+
+
+        <!-- Features 1 -->
         <div class="wrapper">
             <div class="container">
-                <div class="image-wrapper">
-                    <a href="#" class="image featured"><img src="images/pic02.jpg" /></a>
-                </div>
                 <header>
-                    <h2> Welcome </h2>
+                    <h2> Contact Us!  </h2>
                 </header>
-                <p> Welcome to our interdisciplinary research group at Michigan State University. Our team is composed of experts in high energy astrophysics and computational meta research, working together to unlock the secrets of the universe. Our computational meta research focuses on peer review, using natural language processing and machine learning to improve the scientific process. We also have researchers studying various types of supernovae, with the goal of calibrating them for cosmological distance measurements and understanding cosmic nucleosynthesis. To aid in this research, we have developed the TARDIS open science tool for radiative transfer, which allows us to do astrophysical transient and stellar radiative transfer, analyze spectra, and accelerate codes using neural network based emulator models. We use advanced Bayesian statistic tools to infer parameters from the data we collect. In addition, we conduct observational campaigns to search for supernova companion stars and lead both ground and space-based telescope campaigns for various science goals. Education and mentorship are an essential part of our group culture, and we actively promote open science principles through the development of open source tools. We also participate in public outreach, including summer of code activities, to share our findings and inspire future generations of scientists. Join us in our quest to understand the universe. </p>
+                <section class="col-6 col-12-narrower">
+                    <form method="post" action="#">
+                        <div class="row gtr-50">
+                            <div class="col-6 col-12-mobile">
+                                <input name="name" placeholder="Name" type="text" />
+                            </div>
+                            <div class="col-6 col-12-mobile">
+                                <input name="email" placeholder="Email " type="text" />
+                            </div>
+                            <div class="col-12">
+                                <textarea name="message" placeholder="Message"></textarea>
+                            </div>
+                            <div class="col-12">
+                                <ul class="actions">
+                                    <li><input type="submit" value="Send Message" /></li>
+                                    <li><input type="reset" value="Clear" /></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </form>
+                </section>
             </div>
         </div>
         <!-- Footer -->
