--- a/steps/index.html
+++ b/steps/index.html
@@ -104,8 +104,8 @@
       <img style="max-width: 500px;" src="directory.png">
       <li>Next, fill out the JSONs:.</li>
       <ol type="a" >
-        <li> The "category" key inside <i>basic_info.json</i> should be one of the following: <br>"Investigator", “Graduates”, “Undergraduates”,
-          “Post Graduates”, “Post Doctorates” <mark>(spelling and case-sensitive)</mark>.</li>
+        <li> The "category" key inside <i>basic_info.json</i> should be one of the following: <br>"Investigator", “Graduate Students”, “Undergraduate Students”,
+         “Post Doctoral Fellows” <mark>(spelling and case-sensitive)</mark>.</li>
           
           <li>Please note "current_role": "Your_role" is for your more personal role in group. <br> <b>Example:</b><br> "category":
           "Undergraduates",<br>
