--- a/steps/index.html
+++ b/steps/index.html
@@ -83,6 +83,7 @@
     <ul>
       <li>Reply to this thread or personally message me with your github username so that it can be added on github
         repo</a> </li>
+        <li>Do not delete any key inside jsons. You may leave key's value as empty string. And for JSONs with section key, just leaving that empty will not display the information in it.</a> </li>
 
       <h1>Detailed steps</h1>
     </ul>
