--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <nav class="navbar navbar-expand-lg stroke">
                 <h1>
                     <a class="navbar-brand" href="index.html">
-                        <span class="fa fa-lightbulb"></span> Intelligence
+                        <span class="fa fa-lightbulb"></span> KerzendorfGroup
                     </a>
                 </h1>
                 <!-- if logo is image enable this   
@@ -165,12 +165,12 @@
     <section id="home" class="w3l-banner py-5">
         <div class="container py-lg-5 py-md-4">
             <div class="py-lg-5 py-4">
-                <div class="banner-info-grid">
+                <!--div class="banner-info-grid">
                     <h3 class="mb-4"><sup>This is</sup> Kerzendorf Group</h3>
                     <p>Pushing the limits of what we know, and expanding our understanding.</p>
                     <a class="btn btn-secondary btn-style mt-5 me-2" href="#discover"> Discover Now </a>
                     <a class="btn btn-style transparent-btn mt-5" href="#"> Get Started </a>
-                </div>
+                </div-->
             </div>
         </div>
     </section>
@@ -182,7 +182,7 @@
         <div class="container py-md-5 py-2">
             <div class="row w3l-row">
                 <div class="col-lg-6 w3l-image pe-lg-5 mb-lg-0 mb-md-5 mb-4">
-                    <img src="website_files/images/about.jpg" alt="" class="img-fluid">
+                    <img src="website_files/images/table.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-lg-6 w3l-about-info px-lg-4 align-center">
                     <h6 class="w3l-title-small mb-1">About Us</h6>
