Research page menu

--- a/designs/index.html
+++ b/designs/index.html
@@ -110,16 +110,14 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                                <a class="dropdown-item" href="sub_research/SubG_1.html">SubG 1</a>
+                                <a class="dropdown-item" href="astrophysical_ansients.html">Astrophysical Transients</a>
 
-                                <a class="dropdown-item" href="sub_research/SubG_2.html">SubG 2</a>
+                                <a class="dropdown-item" href="computational_metascience.html">Computational
+                                    Metascience</a>
 
-                                <a class="dropdown-item" href="sub_research/SubG_3.html">SubG 3</a>
 
                             </div>
                         </li>
-
-
 
 
 
