--- a/steps/index.html
+++ b/steps/index.html
@@ -122,6 +122,9 @@
         </li>
         <li>Also in <i>basic_info.json</i>, if you are currently a part of the Kerzendorf group, keep "group_end_year":
           "Present". Otherwise, enter the year of leaving so that your name can be placed in the Alumni category</li>
+          
+          <li> Write the name of your personal directory inside <mark>id</mark> key inside <i>basic_info.json</i>
+          </li>
         <li>In <i>social_links.json</i>, if you do not have any of the social media accounts, you may leave them as an
           empty
           string. See the figure below for reference</li>
