Fixing command to copy

--- a/steps/index.html
+++ b/steps/index.html
@@ -103,7 +103,7 @@
       </li>
       <li>Add your SSH key to your GitHub account: <ol type="a">
           <li>Copy the contents of the public key file (id_ed25519.pub) to your clipboard. You can do this by running:
-            <br><code>cat ~/.ssh/id_ed25519.pub | pbcopy</code> </li>
+            <br><code>cat ~/.ssh/id_ed25519.pub</code> </li>
           <li>Go to your GitHub account settings and navigate to the "SSH and GPG keys" section.</li>
           <li>Click on "New SSH key" or "Add SSH key".</li>
           <li>Give your key a descriptive title (e.g., "My MacBook Pro") and paste the contents of the public key file
